--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
   "bugs": {
     "url": "https://github.com/dalesEwerton/lifeisagame/issues"
   },
+  "engines": {
+        "node": "6.11.4",
+        "npm": "3.10.10"
+  },
   "homepage": "https://github.com/dalesEwerton/lifeisagame#readme",
   "main": "karma.conf.js",
   "author": "Dales Fragoso"
